# gitoxide

gix-dir/: Cargo.toml
gix-dir/src/: lib.rs
gix-dir/tests/fixtures/: walk_baseline.sh
gix-dir/tests/fixtures/generated-archives/: walk_baseline.tar.xz
gix-dir/tests/walk/: mod.rs
gix-pack/src/cache/delta/traverse/: resolve.rs  util.rs
